Fix wpcf7 list label spacing

--- a/exploreveg/bootswatch.less
+++ b/exploreveg/bootswatch.less
@@ -680,6 +680,12 @@ img.content-right {
     margin-bottom: 15px;
 }
 
+.wpcf7-list-item-label {
+    /* This removes some extra spacing that cf7 adds by inserting a &nbsp; between
+       the radio button and its label. */
+    margin-left: -0.8em;
+}
+
 /* TCVF site styles */
 
 #tcvf-schedule {
